--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                <div class="logo-container">my portfolio</div>
            <ui>
                <li><a href="index.html"class="current">Home</a></li>
-               <li><a href="../1project/pj%201.html">project 1</a></li>
+               <li><a href="pj%201.html">project 1</a></li>
                 <li><a href="a">project 2</a></li>
                 <li><a href="a">project 3</a></li>
                <li><a href="a">project 4</a></li>
@@ -21,7 +21,7 @@
                 </nav> 
           </header>
           <div class="main-container"> 
-           <div class="froflie"><img src="image/%EC%86%8C%EC%9D%80%EC%A6%9D%EB%AA%85.jpg"width="100%" height="auto"> 
+           <div class="froflie"><img src="main/image/%EC%86%8C%EC%9D%80%EC%A6%9D%EB%AA%85.jpg"width="100%" height="auto"> 
               </div>
               <div class="name">Kim so eun <br>김소은<br>
                  <br>Character Designer /Animater</div>
@@ -40,11 +40,11 @@
                  <table>
                      <thead>
              <tr> 
-        <td><p class="image"><img src="image/c.jpg" width="500px" height="300px"></p></td>
-                  <td><p class="image"><img src="image/b.jpg"width="400px" height="200px"></p></td>
+        <td><p class="image"><img src="/main/image/c.jpg" width="500px" height="300px"></p></td>
+                  <td><p class="image"><img src="/main/image/b.jpg"width="400px" height="200px"></p></td>
         </tr>
-       <td><p class="image"><img src="image/rat.JPG"width="400px" height="200px"></p></td>
-        <td><p class="image"><img src="image/d.jpg"width="400px" height="200px"></p></td>
+       <td><p class="image"><img src="/main/image/rat.JPG"width="400px" height="200px"></p></td>
+        <td><p class="image"><img src="/main/image/d.jpg"width="400px" height="200px"></p></td>
                      </thead>
                  </table>
                   </center>
