--- a/pj 1.html
+++ b/pj 1.html
@@ -12,7 +12,7 @@
            <nav class="nav-container">
                <div class="logo-container">my portfolio</div>
            <ui>
-               <li><a href="../main/index.html">Home</a></li>
+               <li><a href="index.html">Home</a></li>
                <li><a href="pj%201.html "class="current">project 1</a></li>
                 <li><a href="a">project 2</a></li>
                 <li><a href="a">project 3</a></li>
@@ -26,7 +26,7 @@
               <nav>
               <ul>
                   <li><a href="../main/index.html"class="class_home">홈</a>
-                  <li><a href="../1project/pj%201.html" class="class_pj1">부스러기 프렌즈</a>
+                  <li><a href="pj%201.html" class="class_pj1">부스러기 프렌즈</a>
                  <li><a href="../2project/p2%201.html"class="class_pj2">설치는 설치류</a>    
                   <li><a href="../3project/pj%201.html"class="class_pj3">어처구니 씨밀레</a>
                 <li><a href="../4project/project/pj%201.html"class="class_pj4">GAG FROG.</a>
