--- a/pj 1.html
+++ b/pj 1.html
@@ -20,16 +20,17 @@
                </ui>
                 </nav> 
           </header>
-          <div class="main-container"> Kim so eun </div>
+          <div class="main-container"></div>
+          <div class="main-img"><a href="1project/image/%EB%B6%80%EC%8A%A4%EB%9F%AC%EA%B8%B0.jpg" width="300px"></a></div>
         
           <footer><div id="img_nav">프로젝트 살펴보기(클릭)
               <nav>
               <ul>
-                  <li><a href="../main/index.html"class="class_home">홈</a>
+                  <li><a href="index.html"class="class_home">홈</a>
                   <li><a href="pj%201.html" class="class_pj1">부스러기 프렌즈</a>
-                 <li><a href="../2project/p2%201.html"class="class_pj2">설치는 설치류</a>    
-                  <li><a href="../3project/pj%201.html"class="class_pj3">어처구니 씨밀레</a>
-                <li><a href="../4project/project/pj%201.html"class="class_pj4">GAG FROG.</a>
+                 <li><a href="2project/p2%201.html"class="class_pj2">설치는 설치류</a>    
+                  <li><a href="3project/pj%201.html"class="class_pj3">어처구니 씨밀레</a>
+                <li><a href="4project/project/pj%201.html"class="class_pj4">GAG FROG.</a>
                   </li>
                   </ul>
               </nav>
