--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <ui>
                <li><a href="index.html"class="current">Home</a></li>
                <li><a href="pj%201.html">project 1</a></li>
-                <li><a href="a">project 2</a></li>
+                <li><a href="/pj2.html">project 2</a></li>
                 <li><a href="a">project 3</a></li>
                <li><a href="a">project 4</a></li>
                </ui>
