--- a/pj3.html
+++ b/pj3.html
@@ -21,10 +21,12 @@
           </header>
           <div class="froflie">
           <img src="/3project/o.jpg"width="50%" height="auto"></div>
+             <div class="intro"><img src="3project/icon-09.jpg"width="100%" height="auto"></div>
+          <div class="intro"><img src="3project/icon-08.jpg"width="100%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
-          <div class="intro"><img src=""width="100%" height="auto"></div>
-               <div class="intro"><img src=""width="100%" height="auto">
-              </div>
+               <div class="intro"><img src="3project/icon-10.jpg"width="100%" height="auto">
+              </div>  <div class="intro"><img src="3project/icon-11.jpg"width="100%" height="auto"></div>
+            <div class="intro"><img src="3project/icon-12.jpg"width="100%" height="auto"></div>
           <footer><div id="img_nav">프로젝트 살펴보기(클릭)
               <nav>
               <ul>
