--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                <li><a href="index.html"class="current">Home</a></li>
                <li><a href="pj%201.html">project 1</a></li>
                 <li><a href="/pj2.html">project 2</a></li>
-                <li><a href="a">project 3</a></li>
-               <li><a href="a">project 4</a></li>
+                <li><a href="pj3.html">project 3</a></li>
+               <li><a href="pj4.html">project 4</a></li>
                </ui>
                 </nav> 
           </header>
@@ -58,8 +58,8 @@
                   <li><a href="index.html"class="class_home">홈</a>
                   <li><a href="../1project/pj%201.html" class="pj1">부스러기 프렌즈</a>
                  <li><a href="../2project/p2%201.html"class="class_pj2">설치는 설치류</a>    
-                  <li><a href="../3project/pj%201.html"class="class_pj3">어처구니 씨밀레</a>
-                <li><a href="../4project/project/pj%201.html"class="class_pj4">GAG FROG.</a>
+                  <li><a href="./pj3.html"class="class_pj3">어처구니 씨밀레</a>
+                <li><a href="./pj4.html"class="class_pj4">GAG FROG.</a>
                   </li>
                   </ul>
               </nav>
