--- a/pj 1.html
+++ b/pj 1.html
@@ -20,7 +20,10 @@
                </ui>
                 </nav> 
           </header>
-          <div class="froflie">
+          <div class="froflie"><div class="brand">부스러기 프렌즈</div><div class="ment">제작시기:1학년 1학기 <br>
+              제작이유: 공모전 참가(부스러기 사랑나눔회)<br>
+              컨셉: 별이 되기위해 아이들을 돕는 부스러기 프렌즈.<br>
+              설명: 처음으로 도전한 공모전 이었습니다. 평소 사람들이 하찮게 여기는 부스러기라는 존재에서 출발하여 별이라는 멋진 존재가 되기위해 아이들을 돕는 부스러기를 통해 아동복지시설의 의미가 잘 들어날 것이라 생각했습니다. 이때는 일러스트도 제대로 다룰 줄 몰랐어서 완성도는 매우 떨어지지만 재미있게 기획했었던 공모전으로 기억이 남습니다.</div>
           <img src="/1project/image/b.jpg"width="40%" height="auto"></div>
           <div class="intro"><img src="/1project/image/icon-04.jpg"width="100%" height="auto"></div>
           <div class="intro"><img src="/1project/image/icon-02.jpg"width="100%" height="auto"></div>
