--- a/pj2.html
+++ b/pj2.html
@@ -19,8 +19,8 @@
                </ui>
                 </nav> 
           </header>
-          <div class="froflie">
-          <img src="/2project/t.jpg"width="50%" height="auto"></div>
+          <div class="froflie"><div class="froflie"><div class="brand">설치는 설치류 이모티콘</div><div class="ment">1학년 초반, 처음으로 도전한 공모전 이었습니다. 부스러기 사랑나눔회의 마스코트 캐릭터를 만드는 공모전으으로 아이들에게 꿈과 희망을 줄 수 있는 마스코트를 디자인해야 했습니다. 평소 사람들이 하찮게 여기는 부스러기라는 존재에서 출발하여 별이 되고자 하는 부스러기들의 인간세상 탐험기라는 스토리를 가지고 있습니다. 이때는 일러스트도 제대로 다룰 줄 몰랐어서 여러모로 미흡하지만 가장 정감이 갑니다.</div>
+          <img src="/2project/t.jpg"width="40%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
                <div class="intro"><img src=""width="100%" height="auto">
