--- a/pj3.html
+++ b/pj3.html
@@ -19,8 +19,11 @@
                </ui>
                 </nav> 
           </header>
-          <div class="froflie">
-          <img src="/3project/o.jpg"width="50%" height="auto"></div>
+          <div class="froflie"><div class="brand">어처구니 씨밀레</div><div class="ment">제작시기:2학년 방학 <br>
+              제작이유: 공모전 참가(궁능캐릭터 공모전)-입선<br>
+              컨셉: 궁궐을 수호하는 마스코트 캐릭터 제작.<br>
+              설명: .</div>
+          <img src="/3project/o.jpg"width="30%" height="auto"></div>
              <div class="intro"><img src="3project/icon-09.jpg"width="100%" height="auto"></div>
           <div class="intro"><img src="3project/icon-08.jpg"width="100%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
