--- a/pj2.html
+++ b/pj2.html
@@ -14,8 +14,8 @@
                <li><a href="index.html">Home</a></li>
                <li><a href="pj%201.html">project 1</a></li>
                 <li><a href="pj2.html" class="current">project 2</a></li>
-                <li><a href="a">project 3</a></li>
-               <li><a href="a">project 4</a></li>
+                <li><a href="pj3.html">project 3</a></li>
+               <li><a href="pj4.css">project 4</a></li>
                </ui>
                 </nav> 
           </header>
@@ -23,7 +23,7 @@
           <img src="/2project/t.jpg"width="40%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
-               <div class="intro"><img src=""width="100%" height="auto">
+              <div class="intro"><img src=""width="100%" height="auto"></div>
               </div>
           <footer><div id="img_nav">프로젝트 살펴보기(클릭)
               <nav>
@@ -31,8 +31,8 @@
                   <li><a href="index.html"class="class_home">홈</a>
                   <li><a href="pj%201.html" class="class_pj1">부스러기 프렌즈</a>
                  <li><a href="pj2.html"class="class_pj2">설치는 설치류</a>    
-                  <li><a href="3project/pj%201.html"class="class_pj3">어처구니 씨밀레</a>
-                <li><a href="4project/project/pj%201.html"class="class_pj4">GAG FROG.</a>
+                  <li><a href="pj3.html"class="class_pj3">어처구니 씨밀레</a>
+                <li><a href="pj4.html"class="class_pj4">GAG FROG.</a>
                   </li>
                   </ul>
               </nav>
