--- a/pj2.html
+++ b/pj2.html
@@ -15,16 +15,22 @@
                <li><a href="pj%201.html">project 1</a></li>
                 <li><a href="pj2.html" class="current">project 2</a></li>
                 <li><a href="pj3.html">project 3</a></li>
-               <li><a href="pj4.css">project 4</a></li>
+               <li><a href="pj4.html">project 4</a></li>
                </ui>
                 </nav> 
           </header>
           <div class="froflie"><div class="froflie"><div class="brand">설치는 설치류 이모티콘</div><div class="ment">1학년 초반, 처음으로 도전한 공모전 이었습니다. 부스러기 사랑나눔회의 마스코트 캐릭터를 만드는 공모전으으로 아이들에게 꿈과 희망을 줄 수 있는 마스코트를 디자인해야 했습니다. 평소 사람들이 하찮게 여기는 부스러기라는 존재에서 출발하여 별이 되고자 하는 부스러기들의 인간세상 탐험기라는 스토리를 가지고 있습니다. 이때는 일러스트도 제대로 다룰 줄 몰랐어서 여러모로 미흡하지만 가장 정감이 갑니다.</div>
           <img src="/2project/t.jpg"width="40%" height="auto"></div>
-          <div class="intro"><img src=""width="100%" height="auto"></div>
-          <div class="intro"><img src=""width="100%" height="auto"></div>
-              <div class="intro"><img src=""width="100%" height="auto"></div>
-              </div>
+              <center>
+          <div class="intro"><img src="2project/icon-06.jpg"width="50%" height="auto"></div>
+          <div class="intro"><img src="2project/icon-03.jpg"width="100%" height="auto"></div>
+              <div class="intro"><img src="2project/icon-04.jpg"width="100%" height="auto"></div>
+              <div class="intro"><img src="2project/icon-05.jpg"width="100%" height="auto"></div>
+               <div class="intro"><img src="2project/icon-08.jpg"width="100%" height="auto"></div>
+               <div class="intro"><img src="2project/icon-09.jpg"width="100%" height="auto"></div>
+          <div class="intro"><img src="2project/icon-10.jpg"width="70%" height="auto"></div> 
+              </center>
+          </div>
           <footer><div id="img_nav">프로젝트 살펴보기(클릭)
               <nav>
               <ul>
