--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                  <table>
                      <thead>
              <tr> 
-        <td><p class="image"><img src="/main/image/c.jpg" width="500px" height="300px"></p></td>
-                  <td><p class="image"><img src="/main/image/b.jpg"width="400px" height="200px"></p></td>
+        <td><p class="image"><img src="main/image/c.jpg" width="500px" height="300px"></p></td>
+                  <td><p class="image"><img src="main/image/b.jpg"width="400px" height="200px"></p></td>
         </tr>
-       <td><p class="image"><img src="/main/image/rat.JPG"width="400px" height="200px"></p></td>
-        <td><p class="image"><img src="/main/image/d.jpg"width="400px" height="200px"></p></td>
+       <td><p class="image"><img src="main/image/rat.JPG"width="400px" height="200px"></p></td>
+        <td><p class="image"><img src="main/image/d.jpg"width="400px" height="200px"></p></td>
                      </thead>
                  </table>
                   </center>
