--- a/pj2.html
+++ b/pj2.html
@@ -19,7 +19,10 @@
                </ui>
                 </nav> 
           </header>
-          <div class="froflie"><div class="froflie"><div class="brand">설치는 설치류 이모티콘</div><div class="ment">1학년 초반, 처음으로 도전한 공모전 이었습니다. 부스러기 사랑나눔회의 마스코트 캐릭터를 만드는 공모전으으로 아이들에게 꿈과 희망을 줄 수 있는 마스코트를 디자인해야 했습니다. 평소 사람들이 하찮게 여기는 부스러기라는 존재에서 출발하여 별이 되고자 하는 부스러기들의 인간세상 탐험기라는 스토리를 가지고 있습니다. 이때는 일러스트도 제대로 다룰 줄 몰랐어서 여러모로 미흡하지만 가장 정감이 갑니다.</div>
+          <div class="froflie"><div class="froflie"><div class="brand">설치는 설치류 이모티콘</div><div class="ment">제작시기:1학년 2학기 <br>
+              제작이유:  컴퓨터 그래픽스 1 이모티콘 제작 수업<br>
+              컨셉: 음식을 사랑하는 설치류 아저씨들의 식도락 여행기.<br>
+              설명: 브레인 스토밍을 통해 랜덤단어를 조합하여 이모티콘 캐릭터를 제작했습니다. '쥐'와 '아저씨'의 재미있는 조합으로 시작하여 사람들에게 공감을 얻을 수 있는 이모티콘을 만들기 위해 음식을 주제로 한 이모티콘을 만들게 되었습니다. 설치는 설치류의 캐릭터들은 우리 주변에서 볼 수 있는 성격과 특징을 담은 캐릭터 들로 음식을 좋아하는 살마이거나 주위에 그런 사람이 있다면 공감할 수 있을 것 입니다.</div>
           <img src="/2project/t.jpg"width="40%" height="auto"></div>
               <center>
           <div class="intro"><img src="2project/icon-06.jpg"width="50%" height="auto"></div>
