--- a/pj4.html
+++ b/pj4.html
@@ -20,7 +20,7 @@
                 </nav> 
           </header>
           <div class="froflie">
-          <img src="/4project/g.jpg"width="40%" height="auto"></div>
+          <img src="4project/g.jpg"width="40%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
           <div class="intro"><img src=""width="100%" height="auto"></div>
                <div class="intro"><img src=""width="100%" height="auto">
