--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
               <nav>
               <ul>
                   <li><a href="index.html"class="class_home">홈</a>
-                  <li><a href="../1project/pj%201.html" class="pj1">부스러기 프렌즈</a>
-                 <li><a href="../2project/p2%201.html"class="class_pj2">설치는 설치류</a>    
-                  <li><a href="./pj3.html"class="class_pj3">어처구니 씨밀레</a>
-                <li><a href="./pj4.html"class="class_pj4">GAG FROG.</a>
+                  <li><a href="pj%201.html" class="pj1">부스러기 프렌즈</a>
+                 <li><a href="pj2.html"class="class_pj2">설치는 설치류</a>    
+                  <li><a href="pj3.html"class="class_pj3">어처구니 씨밀레</a>
+                <li><a href="pj4.html"class="class_pj4">GAG FROG.</a>
                   </li>
                   </ul>
               </nav>
