--- a/pj3.html
+++ b/pj3.html
@@ -38,7 +38,7 @@
                   <li><a href="pj%201.html" class="class_pj1">부스러기 프렌즈</a>
                  <li><a href="pj2.html"class="class_pj2">설치는 설치류</a>    
                   <li><a href="pj3.html"class="class_pj3">어처구니 씨밀레</a>
-                <li><a href="pj4.html"class="class_pj4">GAG FROG.</a>
+                <li><a href="pj4.html"class="class_pj4">GAG FROG.</a></
                   </li>
                   </ul>
               </nav>
