--- a/pj4.html
+++ b/pj4.html
@@ -19,12 +19,22 @@
                </ui>
                 </nav> 
           </header>
-          <div class="froflie">
+          <div class="froflie"><div class="brand">GAG FROG.</div>
+              <div class="ment">제작시기:2학년 2학기 <br>
+              제작이유: 컴퓨터 그래픽스2 굿즈만들기 과제<br>
+              컨셉: 우물 속 개구리의 도시 생활기<br>
+              스토리: 평화로운 우물 속에서 살던 개구맹이 개그맨이라는 꿈을 이루기 위해 회색 도시로 상경하여 생활하는 일상 이야기를 담고 있습니다. <br>
+              설명: 이 캐릭터는 자신을 나타내는 캐릭터 입니다. 제가 좋아하는 것, 되고싶은 것들이 이 캐릭터들 각자에게 다 담겨있고 이 과제를 통해 제 자신을 찾아보면서 남들에게 알릴 수 있는 기회였다고 생각합니다.</div>
           <img src="4project/g.jpg"width="40%" height="auto"></div>
-          <div class="intro"><img src=""width="100%" height="auto"></div>
-          <div class="intro"><img src=""width="100%" height="auto"></div>
+          <center>
+               <div class="intro"><img src="4project/icon-08.jpg"width="100%" height="auto"></div>
+              <div class="intro"><img src="4project/icon-09.jpg"width="100%" height="auto"></div>
                <div class="intro"><img src=""width="100%" height="auto">
               </div>
+          <div class="intro"><img src="4project/1932792_%EA%B9%80%EC%86%8C%EC%9D%80_%EA%B5%BF%EC%A6%88%EB%AA%A9%EC%97%852.jpg"width="50%" height="auto"></div>
+          <div class="intro4"><img src="4project/%EC%B5%9C%EC%A2%85%EB%AA%A9%EC%97%85.jpg"width="70%" height="auto"></div>
+             
+              </center>
           <footer><div id="img_nav">프로젝트 살펴보기(클릭)
               <nav>
               <ul>
